linked dictionary with hanzi

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="quiz">Quiz</string>
     <string name="animate">Animate</string>
     <string name="next">Ok!</string>
+    <string name="write">Write</string>
 </resources>
