--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="animate">Animate</string>
     <string name="next">Ok!</string>
     <string name="write">Write</string>
+    <string name="title_activity_favorites">FavoritesActivity</string>
 </resources>
