--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="next">Ok!</string>
     <string name="write">Write</string>
     <string name="title_activity_favorites">FavoritesActivity</string>
+    <string name="ocrGallery">OCR</string>
+    <string name="ocrCamera">Camera OCR</string>
 </resources>
